--- a/css/style.css
+++ b/css/style.css
@@ -423,19 +423,30 @@
 
 .desktop-home-page .log-in-button {
   display: flex;
-  width: 240px;
+  width: 100px;
   height: 63px;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding: 30px 142px;
+  padding: 30px 130px;
   position: absolute;
   top: 361px;
-  left: 267px;
+  left: 280px;
   background-color: #f2f2f2;
   border-radius: 1px;
   box-shadow: 0px 4px 12px #0000000d;
+  border-style: none;
+  transition: transform 0.1s ease-in-out;
 }
+
+.log-in-button:hover {
+  transform: scale(0.99);
+}
+
+.log-in-button:active {
+  transform: scale(0.98);
+}
+
 
 .desktop-home-page .text-wrapper-14 {
   position: relative;
@@ -459,18 +470,19 @@
 
 .desktop-home-page .browse-now-button {
   display: flex;
-  width: 240px;
+  width: 100px;
   height: 63px;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding: 30px 142px;
+  padding: 30px 130px;
   position: absolute;
   top: 361px;
   left: 5px;
   background-color: #f2f2f2;
   border-radius: 1px;
   box-shadow: 0px 4px 12px #0000000d;
+  border-style: none;
 }
 
 .desktop-home-page .text-wrapper-15 {
