--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,13 @@
 .desktop-home-page {
-  position: relative;
-  width: 1440px;
+  width: 100%;
   height: 1168px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  overflow: hidden;
 }
 
 .desktop-home-page .foreground {
   position: absolute;
   top: 0;
   left: -17px;
-  width: 1743px;
-  height: 1267px;
+
 }
 
 .desktop-home-page .hero-image {
