--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     rgba(255, 214, 230, 1) 100%
   );
   position: absolute;
-  width: 318px;
+  width: 500px;
   height: 815px;
 }
 
@@ -32,16 +32,15 @@
     rgba(255, 214, 230, 1) 100%
   );
   position: absolute;
-  width: 318px;
+  width: 500px;
   height: 815px;
 }
 
 .desktop-home-page .heroimage {
   position: absolute;
   top: 0;
-  left: 303px;
-  width: 1154px;
-  height: 810px;
+  left: 400px;
+  height: 1000px;
   aspect-ratio: 1.78;
   object-fit: cover;
 }
@@ -56,17 +55,17 @@
 }
 
 .desktop-home-page .footer-2 {
-  top: 810px;
+  top: 1000px;
   width: 1442px;
   background-color: transparent;
   position: absolute;
-  left: 0;
+  left: 40px;
   height: 380px;
 }
 
 .desktop-home-page .footer-3 {
   top: 0;
-  width: 1440px;
+  width: 2000px;
   background-color: #f4f3f1;
   position: absolute;
   left: 0;
@@ -75,9 +74,9 @@
 
 .desktop-home-page .line {
   top: 300px;
-  width: 1381px;
+  width: 1750px;
   position: absolute;
-  left: 30px;
+  left: 80px;
   height: 1px;
   object-fit: cover;
 }
@@ -401,9 +400,9 @@
 
 .desktop-home-page .img {
   top: 29px;
-  width: 1380px;
+  width: 1750px;
   position: absolute;
-  left: 30px;
+  left: 80px;
   height: 1px;
   object-fit: cover;
 }
@@ -426,7 +425,7 @@
   padding: 30px 130px;
   position: absolute;
   top: 361px;
-  left: 280px;
+  left: 345px;
   background-color: #f2f2f2;
   border-radius: 1px;
   box-shadow: 0px 4px 12px #0000000d;
@@ -473,7 +472,7 @@
   padding: 30px 130px;
   position: absolute;
   top: 361px;
-  left: 5px;
+  left: 55px;
   background-color: #f2f2f2;
   border-radius: 1px;
   box-shadow: 0px 4px 12px #0000000d;
@@ -501,13 +500,11 @@
 }
 
 .desktop-home-page .main-text {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 630px;
   height: 345px;
   display: flex;
   flex-direction: column;
+  margin-left: 55px;
 }
 
 .desktop-home-page .find-the-flower-that {
@@ -555,6 +552,7 @@
   background-color: #f2f2f2;
   border-radius: 5px;
   box-shadow: 0px 2px 12px #00000003;
+  margin-left: 55px;
 }
 
 .desktop-home-page .text-wrapper-16 {
@@ -595,6 +593,7 @@
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
+  margin-left: 450px;
 }
 
 .desktop-home-page .chevron-down {
