--- a/css/browse.css
+++ b/css/browse.css
@@ -34,7 +34,9 @@ body {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  z-index: 1;
+  z-index: 100;
+  clip-path: url(#wave-clip);
+  filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.9));
 }
 
 .peony-logo {
@@ -45,6 +47,7 @@ body {
   height: 60px;
   z-index: 10;
   cursor: pointer;
+  z-index: 101;
 }
 
 /* SEARCH BAR */
@@ -63,7 +66,7 @@ body {
   background-color: #f2f2f2;
   border-radius: 5px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.03);
-  z-index: 10;
+  z-index: 101;
   border: none;
 }
 
@@ -90,7 +93,7 @@ body {
   position: absolute;
   top: 75px;
   right: 60px;
-  z-index: 10;
+  z-index: 101;
 }
 
 .nav-list {
@@ -186,15 +189,14 @@ body {
 
 .sub-nav-bar {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 133px;
+  height: 250px;
   background-color: #9fa881;
   border-radius: 10px 10px 0 0;
+  z-index: 2;
 }
 
-.nav a {
+.sub-nav-bar a {
   position: absolute;
   bottom: 40px;
   font-family: 'Montserrat', Helvetica, sans-serif;
@@ -204,26 +206,11 @@ body {
   text-decoration: none;
   cursor: pointer;
   transition: all 0.3s ease;
+  z-index: 1;
 }
 
 .nav a:hover {
   transform: translateY(-2px);
-}
-
-.text-wrapper-2 {
-  left: 50%;
-  transform: translateX(-200px);
-  font-weight: 700 !important;
-}
-
-.text-wrapper {
-  left: 50%;
-  transform: translateX(-30px);
-}
-
-.div {
-  left: 50%;
-  transform: translateX(135px);
 }
 
 /* CATEGORIES SECTION */
