--- a/css/browse.css
+++ b/css/browse.css
@@ -41,10 +41,10 @@ body {
 
 .peony-logo {
   position: absolute;
-  top: 60px;
+  top: 45px;
   left: 60px;
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   z-index: 10;
   cursor: pointer;
   z-index: 101;
@@ -53,7 +53,7 @@ body {
 /* SEARCH BAR */
 .search-bar {
   position: absolute;
-  top: 60px;
+  top: 45px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -91,7 +91,7 @@ body {
 /* NAVIGATION BAR - RIGHT ALIGNED */
 .nav-bar {
   position: absolute;
-  top: 75px;
+  top: 60px;
   right: 60px;
   z-index: 101;
 }
@@ -176,29 +176,23 @@ body {
 }
 
 /* SUB NAVIGATION - CENTERED */
-.nav {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 1440px;
-  height: 133px;
-  z-index: 5;
-}
 
 .sub-nav-bar {
   position: absolute;
+  top: 0px;
   width: 100%;
   height: 250px;
   background-color: #9fa881;
   border-radius: 10px 10px 0 0;
   z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 290px;
+  padding-bottom: 40px;
 }
 
 .sub-nav-bar a {
-  position: absolute;
-  bottom: 40px;
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-weight: 500;
   color: #ffffff;
@@ -209,7 +203,7 @@ body {
   z-index: 1;
 }
 
-.nav a:hover {
+.sub-nav-bar a:hover {
   transform: translateY(-2px);
 }
 
