--- a/css/browse.css
+++ b/css/browse.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -173,6 +174,19 @@ body {
 .dropdown-item:hover {
   background-color: #f8f8f8;
   color: #5a6c3a;
+}
+
+.remove-svg {
+  display: none;
+}
+
+.home-link {
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: 500;
+  color: #ffffff;
+  font-size: 18px;
+  font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
 /* SUB NAVIGATION - CENTERED */
