--- a/css/feedback.css
+++ b/css/feedback.css
@@ -355,6 +355,10 @@ textarea:focus {
   text-decoration: underline;
 }
 
+.no-underline {
+  text-decoration: none;
+}
+
 /* RESPONSIVE */
 @media (max-width: 1200px) {
   .category-grid,
