--- a/css/survey.css
+++ b/css/survey.css
@@ -435,6 +435,10 @@ textarea {
 	text-decoration: underline;
 }
 
+.no-underline {
+  text-decoration: none;
+}
+
 /* RESPONSIVE */
 @media (max-width: 1200px) {
 	.category-grid,
