--- a/css/feedback.css
+++ b/css/feedback.css
@@ -54,6 +54,7 @@ body {
   height: 70px;
   cursor: pointer;
   z-index: 101;
+  border-radius: 100px;
 }
 
 .back-btn {
@@ -270,6 +271,7 @@ textarea:focus {
   position: static;
   width: 50px;
   height: 50px;
+  border-radius: 100px;
 }
 
 .logo-text {
