--- a/css/style.css
+++ b/css/style.css
@@ -193,9 +193,10 @@ body {
   margin-bottom: 20px;
 }
 
-.peony-logo {
+.footer-main .peony-logo {
   width: 50px;
   height: 50px;
+  border-radius: 100px;
 }
 
 .logo-text {
@@ -297,6 +298,12 @@ body {
 
 .no-underline {
   text-decoration: none;
+}
+
+.footer-main .peony-logo {
+  position: static;
+  width: 50px;
+  height: 50px;
 }
 
 /* RESPONSIVE ADJUSTMENTS */
